--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,8 @@ services:
         sleep 2
       done
 
-      echo '📦 Pulling model: mistral:7b-instruct' &&
-      ollama pull mistral:7b-instruct &&
+      echo '📦 Pulling model: gpt-oss:20b' &&
+      ollama pull gpt-oss:20b &&
       echo '✅ Model pulled! Now tailing server logs...' &&
 
       tail -f /tmp/ollama.log
@@ -45,7 +45,7 @@ services:
       - ollama
     environment:
       - OLLAMA_URL=http://ollama:11434
-      - OLLAMA_MODEL=mistral:7b-instruct
+      - OLLAMA_MODEL=gpt-oss:20b
     volumes:
       - /tmp:/tmp
     networks:
